# zitate

./: .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  example_config.yaml  main.py  pyproject.toml  requirement.txt  zitate_db.sqlite
app/: config.py  main.py
app/cogs/: commands.py  events.py
