[project]
name = "zitate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.8.5",
    "aiosignal>=1.3.1",
    "async-timeout>=4.0.3",
    "attrs>=23.1.0",
    "charset-normalizer>=3.2.0",
    "frozenlist>=1.4.0",
    "idna>=3.4",
    "multidict>=6.0.4",
    "py-cord>=2.4.1",
    "pytz>=2023.3.post1",
    "typing-extensions>=4.7.1",
    "yarl>=1.9.2",
]
